--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
     "jws": "^3.1.4"
-  }
+  },
+  "name": "@reges-hq/express-jwt-check",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/reges-hq/express-jwt-check.git"
+  },
+  "author": "reges-hq",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/reges-hq/express-jwt-check/issues"
+  },
+  "homepage": "https://github.com/reges-hq/express-jwt-check#readme",
+  "description": ""
 }
